// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should cross map when emitting signal 1`] = `
"### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###
### 1.8 ### 2.6 2.1 1.8 ### 0.0 0.0 1.1 ### 0.0 0.0 0.0 ### ### ### ### ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 ###
### 2.1 ### 3.3 ### ### ### ### ### 1.2 ### 0.0 ### ### ### ### ### ### ### ### ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ###
### 2.6 3.3 4.8 3.3 2.6 2.1 1.8 1.6 1.4 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ###
### ### ### 9.0 ### 2.1 ### 1.6 ### 1.2 ### 0.0 ### ### ### ### ### ### ### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 1.1 ### ### ###
2.1 2.6 3.3 4.8 ### 1.8 ### 1.4 1.2 1.1 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ### 1.2 1.4 1.6 1.8
### ### ### 3.3 ### 1.6 ### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ### 0.0 ### 1.1 ### ### ###
### 1.8 2.1 2.6 ### 1.4 1.2 1.1 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 ###
### 1.6 ### ### ### 1.2 ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### 0.0 ### ### ### 0.0 ###
### 1.4 1.2 1.1 0.0 1.1 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 ###
### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ###
### 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 ### 0.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 ###
### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ###
### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ###
### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###"
`;

exports[`should cross map when emitting signal 2`] = `
"### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###
### 0.0 ### 1.1 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### ### ### ### ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 1.2 1.4 1.6 ### 1.2 ###
### 0.0 ### 1.2 ### ### ### ### ### 0.0 ### 0.0 ### ### ### ### ### ### ### ### ### 0.0 ### 0.0 ### ### ### ### ### 1.8 ### 1.4 ###
### 1.1 1.2 1.4 1.2 1.1 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 1.1 1.2 1.4 1.6 1.8 2.1 1.8 1.6 ###
### ### ### 1.6 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ### ### ### ### ### ### ### 0.0 ### 0.0 ### 1.1 ### 1.4 ### 2.6 ### ### ###
3.3 2.6 2.1 1.8 ### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 1.2 ### 3.3 4.8 9.0 4.8
### ### ### 1.6 ### 0.0 ### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ### 1.1 ### 2.6 ### ### ###
### 1.1 1.2 1.4 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 2.1 1.8 1.6 ###
### 0.0 ### ### ### 0.0 ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### 0.0 ### ### ### 1.4 ###
### 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 1.1 1.2 ###
### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ###
### 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 ### 0.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 ###
### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ###
### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ###
### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###"
`;

exports[`should emit -5 signal with 5 max distance and 0.5 diffusion factor 1`] = `
"### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###
### -5.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### ### ### ### ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 ###
### -3.5 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### ### ### ### ### ### ### ### ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ###
### -2.9 -2.5 -2.2 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ###
### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ### ### ### ### ### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ###
0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 0.0 0.0
### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ###
### 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 ###
### 0.0 ### ### ### 0.0 ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### 0.0 ### ### ### 0.0 ###
### 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 ###
### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ###
### 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 ### 0.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 ###
### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ###
### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ###
### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###"
`;

exports[`should emit 1 signal with 5 max distance and 0.5 diffusion factor 1`] = `
"### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###
### 1.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### ### ### ### ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 ###
### 0.7 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### ### ### ### ### ### ### ### ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ###
### 0.6 0.5 0.4 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ###
### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ### ### ### ### ### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ###
0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 0.0 0.0
### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ###
### 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 ###
### 0.0 ### ### ### 0.0 ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### 0.0 ### ### ### 0.0 ###
### 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 ###
### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ###
### 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 ### 0.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 ###
### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ###
### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ###
### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###"
`;

exports[`should emit 10 signal with 10 max distance and 0.9 diffusion factor 1`] = `
"### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###
### 0.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### ### ### ### ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 ### 0.0 ###
### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ### ### ### ### ### ### ### ### ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ###
### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 1.1 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ###
### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 1.2 ### ### ### ### ### ### ### ### ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### 0.0 ### ### ###
0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 1.1 1.2 1.4 1.6 1.8 2.1 2.6 ### 1.8 1.6 1.4 1.2 1.1 0.0 0.0 0.0 0.0 ### 0.0 ### 0.0 0.0 0.0 0.0
### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 1.2 ### 2.1 ### 3.3 ### 2.1 ### 1.6 ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ###
### 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 1.1 0.0 1.1 ### 2.6 3.3 4.8 3.3 2.6 2.1 1.8 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 ###
### 0.0 ### ### ### 0.0 ### 0.0 ### 1.2 ### ### ### ### ### 9.0 ### 2.1 ### ### ### ### ### 0.0 ### 0.0 ### 0.0 ### ### ### 0.0 ###
### 0.0 0.0 0.0 0.0 0.0 ### 1.1 1.2 1.4 1.6 1.8 2.1 2.6 3.3 4.8 ### 1.8 1.6 1.4 1.2 1.1 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 ###
### ### ### 0.0 ### 0.0 ### ### ### 1.2 ### 1.6 ### ### ### 3.3 ### 1.6 ### ### ### 0.0 ### 0.0 ### ### ### 0.0 ### 0.0 ### ### ###
### 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 1.1 ### 1.4 1.2 1.1 ### 2.6 ### 1.4 ### 0.0 0.0 0.0 ### 0.0 0.0 0.0 0.0 0.0 ### 0.0 0.0 0.0 ###
### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 1.2 ### 1.2 ### 2.1 ### 1.2 ### 0.0 ### 0.0 ### 0.0 ### ### ### ### ### 0.0 ### 0.0 ###
### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 1.1 ### 1.4 1.6 1.8 1.6 1.4 1.2 1.1 ### 0.0 ### 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ### 0.0 ###
### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ###"
`;
